# 42-ft_linear_regression

./: Cargo.toml  README.md  visualizer.html
data/: data2.csv  values
src/predict/: main.rs
src/train/: main.rs
